@@ -1,0 +1,4 @@
+[actions]
+action.failure=traverse_to:string:prefs_user_details
+action.success=traverse_to:string:prefs_user_details
+
